tried to add table, will update/fix soon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <section id="stores" >
     </section>
     <section id="total"></section>
@@ -15,4 +16,5 @@
 </body>
 <script src="app.js"></script>
 
+<table id="nums-table"></table>
 </html>
