finished implementing constructor functions/table

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <section id="stores" >
-    </section>
+    <a href="sales.html">sales page</a>
+    <section id="stores" ></section>
     <section id="total"></section>
+    <!-- <table id="nums-table"></table> -->
     
-    <!-- <ul id="firstAndPike"></ul> -->
 </body>
 <script src="app.js"></script>
 
-<table id="nums-table"></table>
 </html>
